<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/red">

            <ImageButton
                android:id="@+id/back"
                android:layout_margin="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/back"
                android:layout_gravity="start"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white"
                android:text="@string/setting"/>

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginBottom="200dp"
            android:orientation="vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/label_language"
                android:textSize="18sp"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/btnLang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:text="@string/switch_language" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/label_theme"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>

            <Switch
                android:id="@+id/switchTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_theme" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/label_units"
                android:textSize="18sp"
                android:layout_marginTop="20dp" />

            <RadioGroup
                android:id="@+id/radioUnits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioMetric"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_metric" />

                <RadioButton
                    android:id="@+id/radioImperial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_imperial" />
            </RadioGroup>

            <!-- Section Label
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Google Ads"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/> -->

            <!-- Toggle Switch to Enable/Disable Ads
            <Switch
                android:id="@+id/switchAds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enable Ads"
                android:checked="true" /> -->

        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="@string/ads_banner_id" />

    </LinearLayout>

</ScrollView>