<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/red">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:text="@string/title"/>

            <ImageButton
                android:id="@+id/menu"
                android:layout_margin="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/menu"
                android:layout_gravity="end"
                android:contentDescription="TODO" />

            <ImageButton
                android:id="@+id/power"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="TODO"
                android:src="@drawable/power1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_gravity="end" />

            <ImageButton
                android:id="@+id/expand"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:background="@drawable/square"
                android:layout_gravity="end"
                android:contentDescription="TODO" />

            <!-- <ImageButton
                android:id="@+id/widget"
                android:layout_margin="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/widget"
                android:layout_gravity="end"
                android:contentDescription="TODO" />

            <ImageButton
                android:id="@+id/map"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="TODO"
                android:src="@drawable/map1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_gravity="end" />

            <TextView
                android:id="@+id/fab_lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="हिंदी"
                android:textColor="@color/white"
                android:layout_gravity="end"
                android:textStyle="bold"
                android:textSize="16sp" /> -->

            <!--<ImageButton
                android:id="@+id/btnChangeCity"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search1"
                android:contentDescription="Change City"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_gravity="end" />-->

        </androidx.appcompat.widget.Toolbar>

        <!-- Current Weather -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- AppBar -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_city"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Search city"
                    app:startIconDrawable="@drawable/search"
                    app:endIconMode="clear_text"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusBottomEnd="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textCity"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        android:textColor="@color/red"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/city_name"
                        android:imeOptions="actionSearch"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>


        <!-- <ImageButton
            android:id="@+id/btnLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_manage"
            android:background="?attr/selectableItemBackgroundBorderless" />

        <ImageButton
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_more"
            android:background="?attr/selectableItemBackgroundBorderless" />-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="95dp"
                android:padding="20dp">

                <TextView
                    android:id="@+id/textCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="39°"
                        android:textSize="50sp"
                        android:textStyle="bold"
                        android:textColor="@color/red" />

                    <!-- This pushes the ImageView to the end -->
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/imageWeatherIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:contentDescription="TODO"
                        android:scaleType="centerInside" />

                    <ImageButton
                        android:id="@+id/refresh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="TODO"
                        android:src="@drawable/refresh1"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:layout_gravity="end|bottom" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textFeelsLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feels_like"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:textSize="18sp" />

                <!-- Hourly Forecast Label -->
                <TextView
                    android:id="@+id/textHourlyLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hourly_forecast"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp" />

                <!-- Horizontal RecyclerView -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerHourly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    android:paddingBottom="8dp" />

                <!-- 5-Day Forecast Label -->
                <TextView
                    android:id="@+id/textFiveDayLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/five_day_forecast"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerDaily"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never" />

                <Switch
                    android:id="@+id/switchTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_theme"
                    android:layout_marginTop="20dp"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <!-- <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/fab_lang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="?attr/colorPrimary"
                    android:textColor="@color/white"
                    android:text="हिंदी"
                    android:contentDescription="Change Language" /> -->


                <!-- Add Weather-map Button -->
                <Button
                    android:id="@+id/btnAddMap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_map"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/red"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="20dp" />

                <!-- Add Widget Button -->
                <Button
                    android:id="@+id/btnAddWidget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_widget"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/red"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="10dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="@string/ads_banner_id" />

    </LinearLayout>

</ScrollView>
